@@ -14,7 +14,6 @@
  * @property Smarty_Internal_Runtime_TplFunction      $_tplFunction
  * @property Smarty_Internal_Runtime_Var              $_var
  * @property Smarty_Internal_Runtime_Foreach          $_foreach
- * @property Smarty_Internal_Runtime_Hhvm             $_hhvm
  * @property Smarty_Internal_Runtime_WriteFile        $_writeFile
  * @property Smarty_Internal_Runtime_CodeFrame        $_codeFrame
  * @property Smarty_Internal_Runtime_FilterHandler    $_filterHandler
