@@ -1,6 +1,7 @@
 ﻿ ===== 3.1.30-dev ===== (xx.xx.xx)
  25.12.2015
   - compile {block} tag code and its processing into classes
+  - optimization replace hhvm extension by inline code
   
  24.12.2015
   - new feature Compiler does now observe the template_dir setting and will create separate compiled files if required
